--- a/live-stream-APP/live-stream-APP/Base.lproj/Main.storyboard
+++ b/live-stream-APP/live-stream-APP/Base.lproj/Main.storyboard
@@ -32,6 +32,25 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="820"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
+                                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="D8Y-2F-EG7" userLabel="Gift View">
+                                            <rect key="frame" x="310.5" y="50" width="103.5" height="621"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="D8Y-2F-EG7" secondAttribute="height" multiplier="1:6" id="MWc-kc-HA4"/>
+                                            </constraints>
+                                            <prototypes>
+                                                <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="giftCell" id="Mff-pb-18N" userLabel="Gift Cell">
+                                                    <rect key="frame" x="0.0" y="44.5" width="103.5" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Mff-pb-18N" id="id3-X6-r3e">
+                                                        <rect key="frame" x="0.0" y="0.0" width="103.5" height="43.5"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </tableViewCellContentView>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </tableViewCell>
+                                            </prototypes>
+                                        </tableView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PyI-So-P6X">
                                             <rect key="frame" x="358.5" y="394.5" width="45.5" height="31"/>
                                             <gestureRecognizers/>
@@ -124,15 +143,18 @@
                                             <buttonConfiguration key="configuration" style="plain" image="gift.fill" catalog="system"/>
                                             <connections>
                                                 <action selector="gift:" destination="GeV-Ec-lDj" eventType="touchUpInside" id="UgQ-ct-ClF"/>
-                                                <segue destination="Lgy-aC-4J1" kind="show" id="x85-QB-vij"/>
+                                                <segue destination="Lgy-aC-4J1" kind="show" identifier="gift" id="x85-QB-vij"/>
                                             </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <gestureRecognizers/>
                                     <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="D8Y-2F-EG7" secondAttribute="trailing" id="1aO-IX-vHg"/>
                                         <constraint firstItem="Nya-cF-G1D" firstAttribute="width" secondItem="0ZG-yB-LMG" secondAttribute="width" multiplier="0.5" id="8vF-YK-331"/>
+                                        <constraint firstItem="D8Y-2F-EG7" firstAttribute="width" secondItem="0ZG-yB-LMG" secondAttribute="width" multiplier="0.25" id="BVx-bX-rTd"/>
                                         <constraint firstItem="Nya-cF-G1D" firstAttribute="top" secondItem="0ZG-yB-LMG" secondAttribute="top" constant="50" id="GCI-eR-dfG"/>
+                                        <constraint firstItem="D8Y-2F-EG7" firstAttribute="top" secondItem="QGS-Po-2fk" secondAttribute="top" id="Iid-lv-nM8"/>
                                         <constraint firstItem="Nya-cF-G1D" firstAttribute="leading" secondItem="0ZG-yB-LMG" secondAttribute="leading" id="Ke7-aD-5Y9"/>
                                         <constraint firstItem="WhS-St-s5c" firstAttribute="bottom" secondItem="0ZG-yB-LMG" secondAttribute="bottomMargin" id="S5A-7j-xWD"/>
                                         <constraint firstItem="WhS-St-s5c" firstAttribute="trailing" secondItem="0ZG-yB-LMG" secondAttribute="trailingMargin" id="XsT-9H-xp4"/>
@@ -144,6 +166,7 @@
                                 <size key="customSize" width="414" height="820"/>
                                 <connections>
                                     <outlet property="commentView" destination="qWh-JE-qhw" id="lJp-WU-dNh"/>
+                                    <outlet property="giftTableView" destination="D8Y-2F-EG7" id="4AB-Pl-zPi"/>
                                     <outlet property="likeButton" destination="PyI-So-P6X" id="afq-U1-Usa"/>
                                     <outlet property="textField" destination="ZrQ-fi-1fk" id="s4D-Ua-qEb"/>
                                 </connections>
@@ -173,16 +196,28 @@
                                         <rect key="frame" x="0.0" y="0.0" width="103.5" height="207"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="emoji_17" title=""/>
+                                        <connections>
+                                            <action selector="sendGift:" destination="Lgy-aC-4J1" eventType="touchUpInside" id="5nz-kq-7JQ"/>
+                                            <action selector="sendGifts:" destination="Lgy-aC-4J1" eventType="touchDownRepeat" id="gFq-fO-bSd"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sgm-EO-KkD">
                                         <rect key="frame" x="103.5" y="0.0" width="103.5" height="207"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="emoji_18" title=""/>
+                                        <connections>
+                                            <action selector="sendGift:" destination="Lgy-aC-4J1" eventType="touchUpInside" id="0As-JT-8hr"/>
+                                            <action selector="sendGifts:" destination="Lgy-aC-4J1" eventType="touchDownRepeat" id="jAv-yF-FCv"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mkg-u6-chz">
                                         <rect key="frame" x="207" y="0.0" width="103.5" height="207"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="emoji_24" title=""/>
+                                        <connections>
+                                            <action selector="sendGift:" destination="Lgy-aC-4J1" eventType="touchUpInside" id="BCd-GX-twn"/>
+                                            <action selector="sendGifts:" destination="Lgy-aC-4J1" eventType="touchDownRepeat" id="FrK-rT-3Ww"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sKs-H6-5fm">
                                         <rect key="frame" x="310.5" y="0.0" width="103.5" height="207"/>
