--- a/live-stream-APP/live-stream-APP/Base.lproj/Main.storyboard
+++ b/live-stream-APP/live-stream-APP/Base.lproj/Main.storyboard
@@ -16,8 +16,23 @@
                     <view key="view" contentMode="scaleToFill" id="NtC-67-NNg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o94-ZC-1cH">
+                                <rect key="frame" x="182" y="762" width="50" height="31"/>
+                                <color key="tintColor" systemColor="systemRedColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="giftcard.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="gift" destination="K1A-co-x4F" eventType="touchUpInside" id="txc-4D-PQK"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="PX8-ID-rSc"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="PX8-ID-rSc" firstAttribute="bottom" secondItem="o94-ZC-1cH" secondAttribute="bottom" constant="20" id="0g9-sa-JH9"/>
+                            <constraint firstItem="o94-ZC-1cH" firstAttribute="centerX" secondItem="NtC-67-NNg" secondAttribute="centerX" id="tON-9f-Jgm"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="看直播" image="video" catalog="system" id="FRI-2T-olr"/>
                 </viewController>
@@ -63,25 +78,6 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="820"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
-                                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="D8Y-2F-EG7" userLabel="Gift View">
-                                            <rect key="frame" x="310.5" y="50" width="103.5" height="621"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="D8Y-2F-EG7" secondAttribute="height" multiplier="1:6" id="MWc-kc-HA4"/>
-                                            </constraints>
-                                            <prototypes>
-                                                <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="giftCell" id="Mff-pb-18N" userLabel="Gift Cell">
-                                                    <rect key="frame" x="0.0" y="44.5" width="103.5" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Mff-pb-18N" id="id3-X6-r3e">
-                                                        <rect key="frame" x="0.0" y="0.0" width="103.5" height="43.5"/>
-                                                        <autoresizingMask key="autoresizingMask"/>
-                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    </tableViewCellContentView>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </tableViewCell>
-                                            </prototypes>
-                                        </tableView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PyI-So-P6X">
                                             <rect key="frame" x="358.5" y="394.5" width="45.5" height="31"/>
                                             <gestureRecognizers/>
@@ -164,29 +160,14 @@
                                                 <constraint firstItem="Bpt-ew-TFG" firstAttribute="leading" secondItem="Nya-cF-G1D" secondAttribute="leading" id="o8e-Zj-QgI"/>
                                             </constraints>
                                         </view>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WhS-St-s5c">
-                                            <rect key="frame" x="363" y="676" width="46" height="31"/>
-                                            <color key="tintColor" systemColor="systemPinkColor"/>
-                                            <state key="normal" title="Button"/>
-                                            <buttonConfiguration key="configuration" style="plain" image="gift.fill" catalog="system" title=""/>
-                                            <connections>
-                                                <action selector="gift:" destination="GeV-Ec-lDj" eventType="touchUpInside" id="UgQ-ct-ClF"/>
-                                                <segue destination="Lgy-aC-4J1" kind="show" identifier="gift" id="x85-QB-vij"/>
-                                            </connections>
-                                        </button>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <gestureRecognizers/>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="D8Y-2F-EG7" secondAttribute="trailing" id="1aO-IX-vHg"/>
                                         <constraint firstItem="Nya-cF-G1D" firstAttribute="width" secondItem="0ZG-yB-LMG" secondAttribute="width" multiplier="0.5" id="8vF-YK-331"/>
-                                        <constraint firstItem="D8Y-2F-EG7" firstAttribute="width" secondItem="0ZG-yB-LMG" secondAttribute="width" multiplier="0.25" id="BVx-bX-rTd"/>
-                                        <constraint firstItem="WhS-St-s5c" firstAttribute="top" secondItem="D8Y-2F-EG7" secondAttribute="bottom" constant="5" id="DMZ-2G-yyE"/>
                                         <constraint firstItem="Nya-cF-G1D" firstAttribute="top" secondItem="0ZG-yB-LMG" secondAttribute="top" constant="50" id="GCI-eR-dfG"/>
-                                        <constraint firstItem="D8Y-2F-EG7" firstAttribute="top" secondItem="QGS-Po-2fk" secondAttribute="top" id="Iid-lv-nM8"/>
                                         <constraint firstItem="Nya-cF-G1D" firstAttribute="leading" secondItem="0ZG-yB-LMG" secondAttribute="leading" id="Ke7-aD-5Y9"/>
                                         <constraint firstAttribute="trailing" secondItem="PyI-So-P6X" secondAttribute="trailing" constant="10" id="ZoJ-of-tpN"/>
-                                        <constraint firstAttribute="trailing" secondItem="WhS-St-s5c" secondAttribute="trailing" constant="5" id="d00-Dg-AQd"/>
                                         <constraint firstItem="PyI-So-P6X" firstAttribute="centerY" secondItem="0ZG-yB-LMG" secondAttribute="centerY" id="kDS-Fl-Rrg"/>
                                     </constraints>
                                 </collectionViewCellContentView>
@@ -194,7 +175,6 @@
                                 <size key="customSize" width="414" height="820"/>
                                 <connections>
                                     <outlet property="commentView" destination="qWh-JE-qhw" id="lJp-WU-dNh"/>
-                                    <outlet property="giftTableView" destination="D8Y-2F-EG7" id="4AB-Pl-zPi"/>
                                     <outlet property="likeButton" destination="PyI-So-P6X" id="afq-U1-Usa"/>
                                     <outlet property="textField" destination="ZrQ-fi-1fk" id="s4D-Ua-qEb"/>
                                 </connections>
@@ -217,7 +197,7 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="F9e-Va-PSH">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
@@ -298,14 +278,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Ae-0N-CCX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="c0a-dO-XlT" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-510" y="-650"/>
+            <point key="canvasLocation" x="-1030" y="820"/>
         </scene>
     </scenes>
     <resources>
         <image name="emoji_17" width="34" height="32"/>
         <image name="emoji_18" width="34" height="32"/>
         <image name="emoji_24" width="32" height="32"/>
-        <image name="gift.fill" catalog="system" width="128" height="124"/>
+        <image name="giftcard.fill" catalog="system" width="128" height="88"/>
         <image name="play" catalog="system" width="120" height="128"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="return" catalog="system" width="128" height="101"/>
@@ -321,8 +301,8 @@
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
